# matrix_calculator

./: CMakeLists.txt  Doxyfile  Makefile  dockerfile  matrix_app  test_app
.github/workflows/: ci.yml
Doxyfile/: Doxyfile
docs/: Doxyfile
docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  main_8cpp.html  matrix_8cpp.html  matrix_8h.html  matrix_8h__dep__incl.map  matrix_8h__dep__incl.md5  matrix_8h_source.html  menudata.js  structMatrix-members.html  structMatrix.html  test_8cpp.html
docs/html/search/: all_1.js  all_2.js  all_4.js  all_7.js  functions_1.js  functions_3.js  functions_5.js  searchdata.js
docs/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  main_8cpp.tex  matrix_8cpp.tex  matrix_8cpp__incl.md5  matrix_8h.tex  matrix_8h__dep__incl.md5  matrix_8h_source.tex  refman.tex  structMatrix.tex  test_8cpp.tex
src/: main.cpp  matrix.cpp  matrix.h  test.cpp
